--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,19 @@
     <string name="todo_task_text">Todo task</string>
     <string name="todo_btn_text">Done</string>
     <string name="add_task_btn_text">Add Task</string>
+    <string name="dev_state_text">Device state</string>
+    <string name="device_up_state_text">Device is up</string>
+    <string name="device_down_state_text">Device is down</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="stats_btn_devs_text">Statistics</string>
+    <string name="chart_title_text">Number of devices by type</string>
+    <string name="credits_btn_text">Credits</string>
+    <string name="author_textview_text">Delurintu George-Calin, C-124, ATM</string>
+    <string name="dev_name_editText_text">Device name</string>
+    <string name="nav_textview_add_dev_text">Add device</string>
+    <string name="dev_brand_editText">Device brand</string>
+    <string name="dev_ip_editText_text">Device IP</string>
+    <string name="dev_location_editText_text">Device location (address)</string>
+    <string name="add_dev_btn_text">Add</string>
+
 </resources>
